--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts",
-    "src/components/Dashboard.tsx"
+    "src/components/Kiosk.tsx"
   ],
   "exclude": ["node_modules"]
 }
