--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.3",
