--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
+    "react-select": "^5.10.2",
     "recharts": "^2.15.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
